; ModuleID = '/home/carl/AnghaBench/linux/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_hpi_recv_mbox.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/usb/c67x00/extr_c67x00-ll-hpi.c_hpi_recv_mbox.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.c67x00_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@HPI_MAILBOX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.c67x00_device*)* @hpi_recv_mbox to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hpi_recv_mbox(%struct.c67x00_device* %0) #0 {
  %2 = alloca %struct.c67x00_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store %struct.c67x00_device* %0, %struct.c67x00_device** %2, align 8
  %5 = load %struct.c67x00_device*, %struct.c67x00_device** %2, align 8
  %6 = getelementptr inbounds %struct.c67x00_device, %struct.c67x00_device* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i64, i64* %4, align 8
  %9 = call i32 @spin_lock_irqsave(i32* %7, i64 %8)
  %10 = load %struct.c67x00_device*, %struct.c67x00_device** %2, align 8
  %11 = load i32, i32* @HPI_MAILBOX, align 4
  %12 = call i32 @hpi_read_reg(%struct.c67x00_device* %10, i32 %11)
  store i32 %12, i32* %3, align 4
  %13 = load %struct.c67x00_device*, %struct.c67x00_device** %2, align 8
  %14 = getelementptr inbounds %struct.c67x00_device, %struct.c67x00_device* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i64, i64* %4, align 8
  %17 = call i32 @spin_unlock_irqrestore(i32* %15, i64 %16)
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @hpi_read_reg(%struct.c67x00_device*, i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
